--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,7 +18,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@core": ["..core/src"]
+      "@core": ["../core/src/index"],
     }
   }
 }
